# NanoFactorySystem

./: .gitignore  README.md  clean.py  pyproject.toml
config/: base.yaml  dhm_paper.yaml
config/objective/: zeiss20x.yaml
config/user/: dwoiwode.yaml  reinhard.yaml
mains/: dhm_paper.py  dhm_paper_dummy.py  dhm_paper_parameter.py  dhm_paper_pillowProblem_63.py  dhm_paper_recovery.py  experiment_plotter.py  main.py  make_images.py  parameter_search_structure.py  plot_drawings.py  task_progress.py
mains/Experiments/: default_exp_file.py  testprint_dhm.py
mains/debugging/: debug_planefit.py  execute_program.py  make_images.py  plot_drawings.py  task_progress.py  task_test.py  test_plot.py
nanofactorysystem/: __init__.py  aerotech.py  attenuator.py  camera.py  config.py  experiment.py  image.py  parameter.py  runtime.py  system.py  transform.py
nanofactorysystem/aerobasic/: __init__.py  ascii.py
nanofactorysystem/camera/: __init__.py  camera.py  optexpose.py
nanofactorysystem/devices/: __init__.py  aerotech.py  aerotech_old.py  attenuator.py  camera.py  coordinate_system.py  dhm.py
nanofactorysystem/dhm/: __init__.py  commands.py  dhmclient.py  motorscan.py  optimage.py
nanofactorysystem/hologram/: __init__.py  container.py
nanofactorysystem/image/: __init__.py  container.py  functions.py
nanofactorysystem/tools/: __init__.py  bisect.py  detector.py  focus.py  grid.py  layer.py  plane.py  ranges.py  stitch.py  transform.py
nanofactorysystem/utils/: __init__.py  geometry.py  visualization.py
test/: __ZLINE__.OGM  attenuator.zdc  controller.zdc  dhm_paper.py  image.zdc  system.zdc  test_aerotech.py  test_attenuator.py  test_camera.py  test_config.py  test_system.py
test/devices/: _test_dhm.py  live_tilt.py  live_tilt_cv.py  test_aerotech.py  test_attenuator.py  test_camera.py  test_dhm.py
test/dhm/: __ZLINE__.OGM  test_dhm.py
test/test_aerobasic/: test_constants.py  test_coordinate_system.py  test_program.py
test/test_femtika/: __init__.py  test_device_WITH_laser.py  test_device_no_laser.py
(+33 files in other folders)
