# pyproject.toml
[build-system]
requires = [
    "setuptools",
	"NumPy",
	"SciPy",
	"SciDataContainer",
#    "OffAxisHolo", #  Currently only exists locally (https://github.com/reincas/OffAxisHolo.git)
#    "PlotFont", # Currently only exists locally (https://github.com/reincas/PlotFont)
#    "mvImpact", # Installation guide: https://assets.balluff.com/documents/DRF_957356_AA_000/Building_page.html
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "nanofactorysystem",
]

[project]
name = "NanoFactorySystem"
version = "0.7.0"
authors = [
    { name = "Reinhard Caspary", email = "reinhard.caspary@phoenixd.uni-hannover.de"},
]
description = "Python 3 package to use the Laser Nanofactory system from Femtika as 3D printer."
readme = "README.md"
dependencies = [
    'NumPy>=1.15',
    'SciDataContainer>=1.1',
	"Scikit-Image",
	"tqdm",
	"matplotlib",  # Extra?
	"opencv-python",  # Extra?
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
